--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="icon" href="assets/google-g-2015-logo-svg-vector.svg">
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+   
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar&family=Roboto:wght@500&display=swap" rel="stylesheet">
@@ -15,15 +17,16 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
-<body>
-    <main>
-    <div>
-        <img src="assets/google-full-logo.svg">
+<body class="vh-100 vw-100 d-flex align-items-center" >
+<div class="border rounded" id="borderr">
+    <main class="d-flex flex-column">
+    <div class="text-center">
+        <img src="assets/google-full-logo.svg" width="75" height="24">
     </div>
 
     <div>
-        <h3>Sign in</h3>
-        <p>Use your Google Account</p>
+        <h3 class="text-center padding-top-16">Sign in</h3>
+        <p class="text-center">Use your Google Account</p>
 
 
     </div>
@@ -47,11 +50,11 @@
     </div>
     
 
+</div>
 
-</main>
 <!--footer-->
 <footer>
-    <ul>
+    <ul class="d-flex flex-row">
         <li>
             <select name="Language">
                 <option value="العربية (Arabic)">
@@ -129,6 +132,6 @@
         </li>
     </ul>
 </footer>
-
+</main>
 </body>
 </html>
