--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+Myanmar&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
-<body class="vh-100 vw-100 d-flex align-items-center" >
-<div class="border rounded" id="borderr">
-    <main class="d-flex flex-column">
+<body class="vh-100 vw-100 d-flex justify-content-center align-items-center flex-column" >
+
+    <main class="d-flex flex-column border rounded" id="borderr">
     <div class="text-center">
         <img src="assets/google-full-logo.svg" width="75" height="24">
     </div>
 
     <div>
-        <h3 class="text-center padding-top-16">Sign in</h3>
+        <h3 class="text-center">Sign in</h3>
         <p class="text-center">Use your Google Account</p>
 
 
@@ -50,8 +50,8 @@
     </div>
     
 
-</div>
 
+</main>
 <!--footer-->
 <footer>
     <ul class="d-flex flex-row">
@@ -132,6 +132,6 @@
         </li>
     </ul>
 </footer>
-</main>
+
 </body>
 </html>
