footer and making it responsive left

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div>
         <h6 class="text-center mb-2 fs-3">Sign in</h6>
-        <p class="text-center mb-5">Use your Google Account</p>
+        <p class="text-center mb-5 fw-bold">Use your Google Account</p>
 
 
     </div>
@@ -35,16 +35,16 @@
     
     <input type="emailorphone" name="emailorphone" id="emailorphone" required placeholder="Email or phone" class="p-2">
 
-    <div class="mb-5 mt-2"><a href="#" class="text-decoration-none"> Forgot email?</a></div>
+    <div class="mb-5 mt-2 fw-bold"><a href="#" class="text-decoration-none"> Forgot email?</a></div>
 
-    <p class="mb-5"> Not your computer? Use Guest mode to sign in privately. <a href="#" class="text-decoration-none">Learn more</a></p>
+    <p class="mb-5"> Not your computer? Use Guest mode to sign in privately. <a href="#" class="text-decoration-none fw-bold">Learn more</a></p>
 
     <div>
-        <button>
+        <button class="fw-bold bg-white border border-white">
             Create account
         </button>
 
-        <button>
+        <button class="fw-bold c-white border rounded border-white p-2 text-light float-end ps-4 pe-4" id="next">
             Next
         </button>
     </div>
@@ -54,9 +54,9 @@
 </main>
 <!--footer-->
 <footer>
-    <ul class="d-flex flex-row gap-4">
+    <ul class="d-flex flex-row gap-5" id="footerr">
         
-        <li>
+        <li class="text-white-50">
             <select name="Language">
                 <option value="العربية (Arabic)">
                     العربية (Arabic)
